# Borg

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  bootstrap.sh  pyproject.toml  render.yaml  requirements.txt  tool-broker.md
.claude/: settings.json
.claude/agents/: auth-forge.md  link-intel.md  log-monitor.md  reel-scout.md  research-agent.md  security-reviewer.md  supervisor.md  test-companion.md  tool-forge.md
.claude/commands/: analyze-video.md  checkpoint.md  diagnose.md  forge-tool.md  hackforge.md  intake.md  prime.md  research.md  scout-reels.md  status.md
.claude/scripts/: command-guard.js  secret-scanner.js  session-save.js
.claude/skills/: approval-workflow.md  context-primer.md  contextforge.md  diagnostics.md  hackforge-router.md  learning-loop.md  memory-checkpoint.md  project-intake.md  tool-broker.md
ai/memory/: DECISIONS.md  LEARNING_LOG.md  WORKING_MEMORY.md
ai/research/: VENDOR_STORY.md
ai/tests/: TEST_PLAN.md
hackforge/: __init__.py  api.py  config.py  demo.py  pipeline_bus.py  seed_graph.py
hackforge/engines/: __init__.py  agent_integrator.py  auth_forge.py  link_intel.py  reel_scout.py  tool_forge.py  video_intel.py
hackforge/graph/: __init__.py  queries.py  schema.py
hackforge/providers/: __init__.py  fastino_client.py  modulate_client.py  neo4j_client.py  reka_client.py  senso_client.py  tavily_client.py  yutori_client.py
hackforge/templates/: mcp_server.py.j2  rest_client.py.j2
mcp-servers/fastino-mcp/: pyproject.toml
mcp-servers/fastino-mcp/src/fastino_mcp/: __init__.py  client.py  server.py  tools.py
(+4 files in other folders)
