[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackforge"
version = "0.1.0"
description = "Autonomous Tool Discovery & Integration Engine"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "neo4j>=5.0",
    "jinja2>=3.1",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["hackforge"]
