[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastino-mcp"
version = "0.1.0"
description = "MCP server for Fastino Labs TLM API"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "httpx>=0.27.0", "pydantic>=2.0"]

[project.scripts]
fastino-mcp = "fastino_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fastino_mcp"]
